--- a/public/css/general/nflister.css
+++ b/public/css/general/nflister.css
@@ -7,6 +7,14 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  justify-content: left;
+}
+
+@media only screen and (max-width: 768px) {
+  .nf-lister-4 {
+
+    justify-content: center;
+  }
 }
 
 .nf-lister-4 .list-item a{
@@ -14,9 +22,9 @@
 }
 
 .nf-lister-4 .list-item {
-  margin-right: 50px;
+  margin-right: 10px;
   margin-bottom: 20px;
-  width : 300px;
+  width : 250px;
   height: 250px;
   border : 1px solid #F5F9F4;
   box-sizing: border-box;
@@ -54,4 +62,67 @@
 }
 .pull-right {
   float : right;
+}
+
+
+/**
+* Blank listers. No Image
+*/
+
+.nf-lister-blank {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: left;
+}
+
+.nf-lister-blank .list-item:hover {
+  border: 1px solid #B4DA5D;
+}
+
+
+
+.nf-lister-blank .list-item a {
+  color: inherit;
+}
+
+@media only screen and (max-width: 768px) {
+  .nf-lister-blank {
+
+    justify-content: center;
+  }
+}
+
+.nf-lister-blank .list-item {
+  margin-right: 10px;
+  margin-bottom: 20px;
+  width : 250px;
+  height: 100px;
+  border : 1px solid #F5F9F4;
+  box-sizing: border-box;
+  -webkit-box-shadow: 0px 0px 19px -2px rgba(0,0,0,0.44);
+  -moz-box-shadow: 0px 0px 19px -2px rgba(0,0,0,0.44);
+  box-shadow: 0px 0px 19px -2px rgba(0,0,0,0.44);
+  background: #FFFFFF;
+  padding: 10px;
+}
+
+.nf-lister-blank .list_item .list-header {
+  font-size: 16px-
+  font-weight: 600;
+}
+
+.nf-lister-blank .list-item .list-header .description {
+  border : 1px solid #BAC382;
+  padding: 2px;
+  border-radius: 6px;
+  -webkit-box-shadow: -1px -1px 34px -8px rgba(113,173,129,1);
+  -moz-box-shadow: -1px -1px 34px -8px rgba(113,173,129,1);
+  box-shadow: -1px -1px 34px -8px rgba(113,173,129,1);
+}
+
+.nf-lister-blank .list-item .list-description {
+
+  border-top : 1px solid #E9E9E5;
+  margin-top : 19px;
 }
